# opengl_examples

./: CMakeLists.txt  README.md  glad.c  main.cpp  triangle.cpp  window.cpp
include/glad/: glad.h
